# x402-mcp-marketplace

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
demo-tools/solana-balance/: index.js  package.json
docs/: protocol-spec.md
examples/: client.js  client.py  client.sh
gateway/: .env.example  package-lock.json  package.json  railway.json
gateway/docs/: error-codes.md
gateway/src/: index.js  payment-verifier.js  proxy.js
programs/marketplace/: Cargo.toml
programs/marketplace/src/: constants.rs  errors.rs  lib.rs
programs/marketplace/src/instructions/: initialize.rs  mod.rs  pay_for_tool.rs  publish_tool.rs  register_publisher.rs
programs/marketplace/src/state/: config.rs  mod.rs  payment.rs  publisher.rs  tool.rs
tests/: marketplace.ts
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
web/app/: globals.css  header-nav.tsx  layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
web/app/faq/: data.json
web/app/publish/: page.tsx
web/app/tool/[id]/: not-found.tsx  page.tsx  tool-detail.tsx  tools-registry.ts
web/app/usage/: page.tsx
web/components/: charts.tsx  copy-button.tsx  counter.tsx  custom-cursor.tsx  live-ticker.tsx  magnetic.tsx  reveal.tsx  scroll-progress.tsx  tilt-card.tsx  usage-data.ts  wallet-button.tsx
