[package]
name = "marketplace"
version = "0.1.0"
description = "MCP tool marketplace with x402 micropayments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

# We keep only the feature flags we actually use: `idl-build` during `anchor build`,
# and `cpi` if another program ever wants to call us via CPI. `no-entrypoint` is
# required by Anchor's `cpi` dependency chain, so it stays.
[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
